FEAT: USE without training (pure_lstm.py) FIX: renaming FIX: hyperparams in files with definition of model

--- a/jupyters/clean-erisk.ipynb
+++ b/jupyters/clean-erisk.ipynb
@@ -485,7 +485,7 @@
    "outputs": [],
    "source": [
     "import logging, sys\n",
-    "from resource_loading import load_vocabulary\n",
+    "from resource_loading import load_dict_from_file\n",
     "data_erisk = []\n",
     "with open('data11.jl') as f:\n",
     "    for line in f:\n",
